@@ -19,8 +19,6 @@
 
 /* pre-defined constants that reflect defaults for CoAP */
 
-#define COAP_DEFAULT_RESPONSE_TIMEOUT  2 /* response timeout in seconds */
-#define COAP_DEFAULT_MAX_RETRANSMIT    4 /* max number of retransmissions */
 #define COAP_DEFAULT_PORT           5683 /* CoAP default UDP port */
 #define COAP_DEFAULT_MAX_AGE          60 /* default maximum object lifetime in seconds */
 #ifndef COAP_MAX_PDU_SIZE
