@@ -1,3 +1,9 @@
+2015-02-19  Olaf Bergmann  <bergmann@tzi.org>
+
+	* net.c (coap_send_confirmed): Fixed retransmission timeout
+	calculation and renamed transmission parameters according to
+	Section 4.8 of RFC 7252.
+
 2014-06-18  Olaf Bergmann  <bergmann@tzi.org>
 
 	* mem.c (coap_malloc_type): New functions for allocating memory.
